--- a/src/components/Slide.css
+++ b/src/components/Slide.css
@@ -49,14 +49,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4px;
+  gap: 6px;
 }
 
 .slide__pagination-item {
   border: 1px solid var(--primary);
   border-radius: 100vmax;
   height: 14px;
-  transition: width 0.5s ease;
+  transition: width 0.25s ease;
   width: 32px;
 }
 
