--- a/src/index.css
+++ b/src/index.css
@@ -56,14 +56,39 @@ input {
   outline: none;
 }
 
+*:focus:not(:focus-visible) {
+  outline: none;
+}
+
+*:focus-visible {
+  outline: 2px dashed #f2637e;
+  outline-offset: 3px;
+}
+
 .sr-only {
-  position: absolute;
-  width: 1px;
+  border-width: 0;
+  clip: rect(0, 0, 0, 0);
   height: 1px;
-  padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: rect(0, 0, 0, 0);
+  padding: 0;
+  position: absolute;
   white-space: nowrap;
-  border-width: 0;
+  width: 1px;
+}
+
+.sr-only:focus {
+  background-color: var(--background);
+  clip: auto;
+  color: var(--secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 64px;
+  overflow: visible;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
 }
